# HDC-PSL-VSA-HDLM-AI-with-Multi-Level-Semantic-Mapping-Strategy-

./: .gitignore  ARCHITECTURE.md  AUDIT_PROTOCOL.md  CLAUDE1_AUTONOMOUS.md  CLAUDE_UPDATE.md  COMMERCIALIZATION_PLAN.md  GEMINI_UPDATE.md  IMPROVEMENTS.md  OVERNIGHT_BRIEFING.md  RAG_STRATEGY.md  README.md  SETUP.md  adversarial_data.rs  benchmark_queries.json  lfi_audit.json  lfi_bus.json  lfi_daemon.sh  setup_tor_mesh.sh  wifi_capture.pcap
lfi_vsa_core/: Cargo.toml  core.1160269  magpie_test.jsonl  target  test_autolearn.exp  test_comprehensive.exp  test_conversation.exp  test_debug.exp  test_final.exp  test_hard.exp  test_intelligence.exp  test_moon.exp  test_trace.exp  test_websearch.exp
lfi_vsa_core/debian/: plausiden.service
lfi_vsa_core/psl/: governance.psl
lfi_vsa_core/scripts/: generate_adversarial_bulk.py  generate_facts_extended.py  generate_structured_facts.py  ingest_arc.py  ingest_conceptnet.py  ingest_gsm8k.py  knowledge_loop.sh  train_rotate.sh
lfi_vsa_core/src/: agent.rs  api.rs  coder.rs  crypto_commitment.rs  crypto_epistemology.rs  data_ingestor.rs  diag.rs  hid.rs  hmas.rs  identity.rs  inference_engine.rs  laws.rs  lib.rs  memory_bus.rs  persistence.rs  qos.rs  reasoning_provenance.rs  stats_cache.rs  telemetry.rs
lfi_vsa_core/src/cognition/: active_inference.rs  calibration.rs  causal.rs  conversation_summarizer.rs  emotion_detector.rs  fsrs_scheduler.rs  global_workspace.rs  knowledge.rs  knowledge_compiler.rs  knowledge_graph.rs  mcts.rs  metacognitive.rs  mod.rs  planner.rs  prompt_optimizer.rs  reasoner.rs  router.rs  spaced_repetition.rs  world_model.rs
lfi_vsa_core/src/data_ingestion/: mod.rs  (+1 more)
lfi_vsa_core/tests/: cognitive_validation_test.rs  consensus_test.rs  daemon_pipeline.rs  doctrine_audit.rs  forensic_audit.rs  full_pipeline_test.rs  hdc_properties.rs  http_api.rs  multi_pass_training.rs  opsec_test.rs  query_subject.rs  stress.rs
tools/lfi-ingest-pcap/: Cargo.toml
tools/orchestrator/: Cargo.toml
tools/pineapple-capture/: Cargo.toml
(+254 files in other folders)
