[package]
name = "lfi_vsa_core"
version = "0.1.0"
edition = "2021"
description = "Localized Forensic Intelligence — 10,000-dim Bipolar VSA HDC Core"

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sha2 = "0.10"
argon2 = "0.5"
regex = "1.10"
rand_chacha = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
