[package]
name = "lfi-ingest-pcap"
version = "0.1.0"
edition = "2021"
description = "802.11 frame-to-fact converter for LFI adversarial training"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
