[package]
name = "pineapple-capture"
version = "0.1.0"
edition = "2021"
description = "WiFi frame capture daemon — streams pcap from Pineapple over SSH"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
